syntax = "proto3";

option go_package = "pkg/grpc";

package shw;

service UserService {
  rpc UpdateRole(UpdateRoleRequest) returns (UserCommonResponse) {}
}

message UpdateRoleRequest {
  string userId = 1;
  string role = 2;
}

message UserCommonResponse {
  bool ok = 1;
  int64 statusCode = 2;
  string message = 3;
}